syntax = "proto3";

package auth;

message SignUpRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}
