syntax = "proto3";

package auth;

import "requests.proto";
import "responses.proto";

service AuthService {
    rpc SignUp (SignUpRequest) returns (SignedUpResponse) {}
}
